Adjust width of Hero to prevent overflow of viewport

--- a/packages/frontend/src/features/Hero/index.module.css
+++ b/packages/frontend/src/features/Hero/index.module.css
@@ -1,7 +1,7 @@
 .hero {
     flex-shrink: 0;
 
-    width: calc(var(--vw, 1vw) * 100);
+    width: 100%;
     height: calc(var(--vh, 1vh) * 100);
 }
 
